src/plugins/sqldrivers/odbc/qsql_odbc.cpp
@@ -28,6 +28,11 @@ QT_BEGIN_NAMESPACE
 
 using namespace Qt::StringLiterals;
 
+// non-standard ODBC SQL data type from SQL Server sometimes used instead of SQL_TIME
+#ifndef SQL_SS_TIME2
+#define SQL_SS_TIME2 (-154)
+#endif
+
 // undefine this to prevent initial check of the ODBC driver
 #define ODBC_CHECK_DRIVER
 
@@ -342,6 +347,7 @@ static QMetaType qDecodeODBCType(SQLSMALLINT sqltype, bool isSigned = true)
     case SQL_TYPE_DATE:
         type = QMetaType::QDate;
         break;
+    case SQL_SS_TIME2:
     case SQL_TIME:
     case SQL_TYPE_TIME:
         type = QMetaType::QTime;
